[package]
name = "host"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
risc0-zkvm = "0.13"
box2d-rs = { version = "0.0.3", features = ["serde_support"] }
methods = { path = "../methods" }
serde = "1.0"
