[package]
name = "methods-guest"
version = "0.1.0"
edition = "2021"

[workspace]

[build-dependencies]
risc0-build = { version="0.13" }

[dependencies]
risc0-zkvm = { version = "0.13", default-features = false, features = ["std"]}
box2d-rs = { path = "../../../Learn/box2d-rs", version = "0.0.3", features = ["serde_support"] }
externc-libm = { git = "https://github.com/HaruxOS/externc-libm" }
serde = "1.0"
